--- a/trials/ajax-test.html
+++ b/trials/ajax-test.html
@@ -23,6 +23,7 @@
         $.ajax({
           type: "POST",
           url: 'https://api.particle.io/v1/devices/' + device_id + '/move_fwd',
+          async: false,
           dataType: 'json',
           data: { access_token: usr_access_token, args: "" },
           success: function() { $("#ajax-result").text("success"); }
@@ -31,6 +32,7 @@
             //return_value = func_response['return_value'];
     //      }
         });
+        $("#ajax-result").text("after ajax-call");
         console.log("moin 2");
       };
    
